# aku

./: .gitignore  AELC.cpp  AL.cpp  AL.h  ELC.cpp  ELC.h  ELOSS.f90  Makefile  Mr_Blue_Sky.cpp  README.md  TOOL.cpp  TOOL.h  beamCutter.C  beamCutter.h  beamTracker.C  beamTracker.h  butler.C  butler.cpp  calibrate_sqr.cpp  calibrate_tree.cpp  calibrate_tree.cxx  calibrate_tree.h  constants.h  cpy_finder.cpp  cutler.cpp  dE_E_angle.cpp  dE_E_angle.cxx  dE_E_angle.h  dE_E_angle.hh  dE_File_clnr.C  dE_File_clnr.h  doorman.C  eAngle.cpp  fastAna.cpp  fastAna.hh  finder.cpp  finder.hh  flash.C  flash.h  freader.cpp  (+26 more)
ELC/: CMakeLists.txt  ELC.h  Eloss.cpp  Makefile
ELC_legacy/: AELC.cpp  AELC.h  ELC.cpp  ELC.h  Eloss.cpp  Makefile  linkdef-gen.sh
ELCcpy/: AELC.cpp  AELC.h  ELC.cpp  ELOSS.f90
util/: dE_File_clnr.C  dE_File_clnr.h  newDawn.C  newDawn.h
